# sdl-pong

./: CMakeLists.txt  README.md  SDL Pong.sln
SDL Pong/: Ball.cpp  Ball.h  Body.cpp  Body.h  Colors.h  IRenderable.h  ITextRenderable.h  ITransformable.h  IUpdatable.h  Input.cpp  Input.h  Label.cpp  Label.h  Paddle.cpp  Paddle.h  PathUtils.cpp  PathUtils.h  PongGame.cpp  PongGame.h  SDL Pong.rc  SDL Pong.vcxproj  SDL Pong.vcxproj.filters  SplashScreen.cpp  SplashScreen.h  Transform.cpp  Transform.h  Types.h  program.cpp  resource.h
public-html/: index.html
res/raw/: title.aa
